# aida-lib

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
aida/: __init__.py  branching.py  choices.py  core.py  enumeration.py  lang.py  words.py
examples/: cake.py  helloworld.py  weather.py
tests/: test_core.py  test_lang.py
